# xmonad-conf

./: package.yaml  stack.yaml  xmonad-conf.cabal
scripts/: get-volume.sh  install-xmonad.sh  rebuild.sh  set-volume.sh  start-xmonad.sh  startup-hook.sh
src/: fourmolu.yaml  shell.nix  xmobar.hs  xmonad.hs
xsession/: xmonad.desktop
