name:                xmonad-conf
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/xmonad-conf#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-x86_64-linux
  hs-source-dirs:      src
  main-is:             xmonad.hs
  ghc-options:         -Wall
                       -fno-warn-missing-signatures
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib >= 0.12
                     , directory
                     , unix
                     , containers
                     , network
                     , X11
                     , filepath
